Changelog
=========

1.2.4 (unreleased)
------------------

- Nothing changed yet.


1.2.3 (2013-05-01)
------------------

- Fix folder_full_view when have many galleria. Use @@uid.


1.2.2 (2013-05-01)
------------------

- Add support for folder_full_view.pt [toutpt]


1.2.1 (2012-07-17)
------------------

- Add french translation


1.2 (2012-06-28)
----------------

- Add lightbox option.


1.1 (2012-05-11)
----------------

- Adding responsive option.


1.0 (2012-02-22)
----------------

- Make it depends on collective.js.galleria

1.0b2 (2011-11-17)
------------------

- fix bugs

1.0b1 2011-08-01
----------------

- Initial release