@@ -15,6 +15,14 @@
       description="Installs the collective.galleria package"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="collective.galleria uninstall"
+      directory="profiles/uninstall"
+      description="Uninstalls the collective.galleria package"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
   <!-- -*- extra stuff goes here -*- -->
   <include package=".browser"/>
   <include package=".upgrades"/>
