@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<layers>
+  <layer remove="true" name="GalleriaLayer" />
+</layers>
