@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="Topic">
+  <property name="view_methods" purge="False">
+    <element remove="true" value="galleria_view" />
+  </property>
+</object>
