@@ -4,7 +4,8 @@ Changelog
 1.2.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add uninstall profile.
+  [thet]
 
 
 1.2.3 (2013-05-01)
